--- a/index.html
+++ b/index.html
@@ -1,1 +1,180 @@
-Hello World!!!
+<!doctype html>
+
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jacob's Profile</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <!--Gradient background and Vignette effect-->
+    <div id="gradient-background"></div>
+    <div class="vignette"></div>
+
+    <div class="section title">
+        <div class="shooting-star-wrapper">
+            <img class="shooting-star shooting-star1" src="images/shooting-star.png">
+        </div>
+        <div class="center-box">
+            <h1>Jacob's Profile</h1>
+            <p>Scroll down to find out more!</p>
+        </div>
+        <div class="shooting-star-wrapper">
+            <img class="shooting-star shooting-star2" src="images/shooting-star.png">
+        </div>
+    </div>
+
+    <div class="stage">
+        <img class="cloud cloud1" src="images/cloud.png">
+        <img class="cloud cloud2" src="images/cloud.png">
+        <img class="cloud cloud3" src="images/cloud.png">
+    </div>
+    
+    <div class="section light-foreground">
+        <div class="center-box">
+            <h1>Who am I? 🤔</h1>
+            <p>
+                I am Jacob, a 2nd Year in Electrical Engineering and Computer Science at UNSW.
+                I have a keen interest in exploring web development!
+            </p>
+        </div>
+    </div>
+    <div>
+        <img id="supporting-img" src="gifs/fluid-animation.gif" height="200"alt="fluid animation" title="very fluid!">        
+    </div>
+
+    <div class="stage">
+        <img class="cloud cloud1" src="images/cloud.png">
+        <img class="cloud cloud2" src="images/cloud.png">
+        <img class="cloud cloud3" src="images/cloud.png">
+    </div>
+
+    <div class="section light-foreground">
+        <div class="center-box">
+            <h1>How multilingual am I? 🥸</h1>
+            <p>
+                The following list contains the programming languages
+                I have learnt so far:
+            </p>
+            <br>
+            <ul>
+                <li>C</li>
+                <li>Java</li>
+                <li>Python</li>
+                <li>JavaScript/TypeScript</li>
+                <li>HTML</li>
+                <li>CSS</li>
+            </ul>    
+            <p class="warning">⚠️ do not click and disturb his slumber.. ⚠️</p>    
+        </div>
+    </div>
+    <div>
+        <div class="cat" title="do not click me!"></div>
+    </div>
+
+    <div class="stage">
+        <img class="cloud cloud1" src="images/cloud.png">
+        <img class="cloud cloud2" src="images/cloud.png">
+        <img class="cloud cloud3" src="images/cloud.png">
+    </div>
+
+    <div class="section light-foreground">
+        <div class="center-box">
+            <h1>Other coding experience? 🧐</h1>
+            <p>
+                Last year I experimented with Shopify's website
+                builder, where I had to learn a bit of HTML and CSS. 
+                It was a lot more difficult using it than
+                I anticipated... 
+            </p>
+            <br>
+            <p>
+                Also here are the list of coding
+                courses I have taken so far:
+            </p>
+            <br>
+            <ul>
+                <li>DESN1000 (using the Arduino kit)</li>
+                <li>ENGG1811</li>
+                <li>COMP1511</li>
+                <li>COMP1521</li>
+                <li>COMP1531</li>
+                <li>COMP2521</li>
+                <li>COMP2511</li>
+            </ul>    
+        </div>
+    </div>
+    <div>
+        <img class="website-img" src="images/website.png" width="400" alt="website" title="me experimenting with the builder">        
+    </div>
+
+
+    <div class="stage">
+        <img class="cloud cloud1" src="images/cloud.png">
+        <img class="cloud cloud2" src="images/cloud.png">
+        <img class="cloud cloud3" src="images/cloud.png">
+    </div>
+
+    <div class="section light-foreground">
+        <div class="center-box">
+            <h1>What are my hobbies? 🤩</h1>
+            <ul>
+                <li>I like to play maimai... a lot</li>
+                <li>Learning Japanese and Mandarin</li>
+                <li>Going to the gym</li>
+            </ul>
+        </div>
+    </div>
+    <div class="maimai-images">
+        <img src="images/machine.jpeg" height="300" alt="machine" title="the arcade game">        
+        <img src="images/maimai.jpg" height="300" alt="maimai score" title="my most recent achievement!">        
+    </div>
+
+    <div class="stage">
+        <img class="cloud cloud1" src="images/cloud.png">
+        <img class="cloud cloud2" src="images/cloud.png">
+        <img class="cloud cloud3" src="images/cloud.png">
+    </div>
+
+    <div class="section light-foreground">
+        <div class="center-box">
+            <h1>Any other interests? 🤨</h1>
+            <p>
+                I don't do these as often anymore but I have enjoyed doing them
+                in the past!
+            </p>
+            <br>
+            <ul>
+                <li>Playing the violin</li>
+                <li>Playing badminton and table tennis</li>
+                <li>Reading manga and light novels</li>
+            </ul>
+        </div>
+    </div>
+    <div>
+        <img id="supporting-img" src="images/violin.jpg" height="300"alt="violin" title="my violin!">        
+    </div>
+
+
+    <div class="stage">
+        <img class="cloud cloud1" src="images/cloud.png">
+        <img class="cloud cloud2" src="images/cloud.png">
+        <img class="cloud cloud3" src="images/cloud.png">
+    </div>
+
+    <div class="section light-foreground end">
+        <div class="center-box">
+            <h1>Fun Fact 😋</h1>
+            <p>I don't wait for dessert, I eat it with my meals!</p>
+        </div>
+    </div>
+    <div class="sun-wrap">
+        <h1 class="hint">Psst! Hover over the sun!</h1>
+        <img class="sun" src="images/the-sun.png" alt="sun" title="thanks for reading!">
+    </div>
+
+    <!--Script for the gradient background-->
+    <script src="script.js"></script>
+</body>
+</html>
