made title text larger

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img class="shooting-star shooting-star1" src="images/shooting-star.png">
         </div>
         <div class="center-box">
-            <h1>Jacob's Profile</h1>
+            <h1 id="title-text">Jacob's Profile</h1>
             <p>Scroll down to find out more!</p>
         </div>
         <div class="shooting-star-wrapper">
